# nvidia-auto-installer-for-fedora-linux

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  ColoramaCalls.py  DriverInstaller.py  FFMPEGInstaller.py  ForcingLoader.py  HostDetection.py  INSTALL.sh  MainFunction.py  PackageCheck.py  PlCudaInstaller.py  README.md  RPMFHandler.py  RepoInstaller.py  SCREENSHOTS.md  SECURITY.md  SuperuserCheck.py  SupportCheck.py  TODO.md  VidAccInstaller.py  VulkanInstaller.py  build_rpm.sh  nvautoinstall.spec  pyproject.toml  renovate.json  requirements.txt  setup.py  tox.ini  x86LibInstaller.py
.github/: dependabot.yml
.github/workflows/: commit-lint.yml  main.yml
nvautoinstall/: MainFunction.py  __init__.py  main.py
nvautoinstall/decoration/: __init__.py  status.py
nvautoinstall/interfaces/: __init__.py  check_superuser_permissions.py  handle_compatibility_check.py  handle_drivers_installation.py  handle_prime_support.py  handle_rpmfusion_repositories.py  install_cublas_support.py  install_cuda_support.py  install_cudnn_support.py  install_everything.py  install_ffmpeg_support.py  install_nvidia_repositories.py  install_video_acceleration.py  install_vulkan_support.py
nvautoinstall/operations/: __init__.py  check_superuser_permissions.py  handle_compatibility_check.py  handle_cuda_installation.py  handle_drivers_installation.py  handle_prime_support.py  handle_rpmfusion_repositories.py  install_cublas_support.py  install_cudnn_support.py  install_ffmpeg_support.py  install_video_acceleration.py  install_vulkan_support.py
src/nvautoinstall/: MainFunction.py  __init__.py
src/nvautoinstall/functions/: checksu.py  install_mode.py  installer_functions.py  package_instatallers.py  rpmf_handler.py  status_decorator.py  support_check.py
src/nvautoinstall/handler/: messages.py
